--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Wallpaper / Background gradient */
+body {
+    background: radial-gradient(125% 125% at 50% 10%, #fff 40%, #3730a3 100%);
+    background-attachment: fixed;
+  }
+
 .fc .fc-toolbar-title {
   font-size: 1rem;
 }
